Fix styling on Top 5 Courses on mobile device under 950px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,6 +474,8 @@ footer {
     grid-template-columns: 100%;
     padding: 5px;
     margin: 0 auto;
+    gap: 15px;
+    background-color: white;
   }
 
   .course-image-1,
@@ -481,7 +483,7 @@ footer {
   .course-image-3,
   .course-image-4,
   .course-image-5 {
-    height: 380px;
+    height: 370px;
     width: 100%;
     margin: 0 auto;
     gap: 5px;
